--- a/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Lista_Encomendas.form
+++ b/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Lista_Encomendas.form
@@ -74,26 +74,21 @@
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="JTFnumero10" min="-2" pref="105" max="-2" attributes="0"/>
-                              <Component id="JLBnumero10" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="JLBnumero10" max="32767" attributes="0"/>
+                              <Component id="JTFnumero10" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <Component id="JTFcidadeorigem10" max="32767" attributes="0"/>
-                                  <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="JLBcidadeorigem10" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace max="32767" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="JLBcidadeorigem10" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="JTFentregador10" alignment="0" min="-2" pref="108" max="-2" attributes="0"/>
-                              <Component id="JLBentregador10" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="JLBentregador10" min="-2" max="-2" attributes="0"/>
+                              <Component id="JTFcidadeorigem10" min="-2" pref="125" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="JLBcidadedestino10" min="-2" max="-2" attributes="0"/>
                               <Component id="JTFcidadedestino10" min="-2" pref="110" max="-2" attributes="0"/>
@@ -219,12 +214,12 @@
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="6" rowCount="30">
-                    <Column editable="true" title="numero_pedido" type="java.lang.Integer"/>
-                    <Column editable="true" title="cidade_origem" type="java.lang.String"/>
-                    <Column editable="true" title="nome" type="java.lang.String"/>
-                    <Column editable="true" title="cidade_destino" type="java.lang.String"/>
-                    <Column editable="true" title="data_entrega" type="java.lang.Object"/>
-                    <Column editable="true" title="statuss" type="java.lang.String"/>
+                    <Column editable="true" title="Numero da encomenda" type="java.lang.Object"/>
+                    <Column editable="true" title="Cidade origem" type="java.lang.Object"/>
+                    <Column editable="true" title="Nome completo" type="java.lang.Object"/>
+                    <Column editable="true" title="Cidade destino" type="java.lang.Object"/>
+                    <Column editable="true" title="Data e hora" type="java.lang.Object"/>
+                    <Column editable="true" title="Status" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -391,7 +386,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Numero do pedido:"/>
+            <Property name="text" type="java.lang.String" value="Numero da encomenda:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="JLBdata10">
@@ -399,7 +394,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Data de entrega:"/>
+            <Property name="text" type="java.lang.String" value="Data e hora:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="JLBstatus10">
