--- a/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Lista_Encomendas.form
+++ b/MotoConnect/src/main/java/com/mycompany/motoconnect/Tela_Lista_Encomendas.form
@@ -80,13 +80,13 @@
                           </Group>
                           <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="JLBcidadeorigem10" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="JTFentregador10" alignment="0" min="-2" pref="108" max="-2" attributes="0"/>
+                              <Component id="JLBentregador10" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="JLBentregador10" min="-2" max="-2" attributes="0"/>
                               <Component id="JTFcidadeorigem10" min="-2" pref="125" max="-2" attributes="0"/>
+                              <Component id="JLBcidadeorigem10" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
@@ -126,9 +126,9 @@
                       <Component id="JLBnumero10" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="JLBdata10" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="JLBstatus10" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="JLBcidadeorigem10" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="JLBentregador10" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="JLBcidadedestino10" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="JLBcidadeorigem10" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -215,8 +215,8 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="6" rowCount="30">
                     <Column editable="true" title="Numero da encomenda" type="java.lang.Object"/>
-                    <Column editable="true" title="Cidade origem" type="java.lang.Object"/>
                     <Column editable="true" title="Nome completo" type="java.lang.Object"/>
+                    <Column editable="true" title="Cidade origem" type="java.lang.Object"/>
                     <Column editable="true" title="Cidade destino" type="java.lang.Object"/>
                     <Column editable="true" title="Data e hora" type="java.lang.Object"/>
                     <Column editable="true" title="Status" type="java.lang.Object"/>
